Atualizações do processo de style.css

--- a/front end/index.html
+++ b/front end/index.html
@@ -38,10 +38,11 @@
     </header>
 
     <!--Destaque-->
-    <main id="">
+    <main>
         <div class="container"> 
             <h1>FRONT END</h1>
-        <h2>Damos vida ao seus negócios digitais.</h2>
+        <h2>Damos vida aos seus negócios digitais.</h2>
+        <a href="#" target="_blank" class="botao">Saiba mais</a>
         </div>    
     </main>
 
