--- a/front end/index.html
+++ b/front end/index.html
@@ -48,9 +48,31 @@
 
     <!--Sobre-->
     <section id="sobre">
-        <div class="container">
+        <div class="container flex2">
+            <div class="destaque_sobre">
+                <img src="img/html5css3.jpg" alt="HTML e CSS3">
+            </div>
+            <div class="texto_sobre">
         <h2>Front End</h2>
-    </div>
+                <p>Desenvolvimento web front-end é o desenvolvimento da interface gráfica do usuário de um site, através do uso do HTML, CSS e JavaScript, para que os usuários possam visualizar interagir com esse site.</p>
+
+                <div class="topico_sobre flex2">
+                    <img src="img/html5.png" alt="HTML 5">
+                    <p>HTML 5</p>
+                </div>
+
+                <div class="topico_sobre flex2">
+                    <img src="img/css3.png" alt="CSS3">
+                    <p>CSS3</p>
+                </div>
+
+                <div class="topico_sobre flex2">
+                    <img src="img/js.png" alt="JavaScript">
+                    <p>JavaScript</p>
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <!--One Page-->
