--- a/front end/index.html
+++ b/front end/index.html
@@ -76,10 +76,18 @@
     </section>
 
     <!--One Page-->
-    <section>
-        <div class="container">
-        <h2>One Page Site</h2>
-    </div>
+    <section id="onepage">
+        <div class="container flex3">
+            <div class="texto_site">
+                <h2>One Page Site</h2>
+                <p>
+                    Ideal para negócios de pequeno ou médio porte. O site One Page é um site onde você inclui todas as informações que o visitante precisa de forma objetiva e criativa em uma única página.
+                </p>
+            </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Em0R3csNMVE?si=cFxXmqBlNsq19lOo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
     </section>
 
     <!--Wireframe - PDF-->
