Atualizações Index e Style

--- a/front end/index.html
+++ b/front end/index.html
@@ -31,7 +31,7 @@
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#conteudo">Conteúdo</a></li>
                     <li><a href="#contato">Contatos</a></li>
-                    
+
                 </ul>
             </nav>
         </div>
@@ -39,11 +39,11 @@
 
     <!--Destaque-->
     <main>
-        <div class="container"> 
+        <div class="container">
             <h1>FRONT END</h1>
-        <h2>Damos vida aos seus negócios digitais.</h2>
-        <a href="#" target="_blank" class="botao">Saiba mais</a>
-        </div>    
+            <h2>Damos vida aos seus negócios digitais.</h2>
+            <a href="#" target="_blank" class="botao">Saiba mais</a>
+        </div>
     </main>
 
     <!--Sobre-->
@@ -53,8 +53,10 @@
                 <img src="img/html5css3.jpg" alt="HTML e CSS3">
             </div>
             <div class="texto_sobre">
-        <h2>Front End</h2>
-                <p>Desenvolvimento web front-end é o desenvolvimento da interface gráfica do usuário de um site, através do uso do HTML, CSS e JavaScript, para que os usuários possam visualizar interagir com esse site.</p>
+                <h2>Front End</h2>
+                <p>Desenvolvimento web front-end é o desenvolvimento da interface gráfica do usuário de um site, através
+                    do uso do HTML, CSS e JavaScript, para que os usuários possam visualizar interagir com esse site.
+                </p>
 
                 <div class="topico_sobre flex2">
                     <img src="img/html5.png" alt="HTML 5">
@@ -81,11 +83,15 @@
             <div class="texto_site">
                 <h2>One Page Site</h2>
                 <p>
-                    Ideal para negócios de pequeno ou médio porte. O site One Page é um site onde você inclui todas as informações que o visitante precisa de forma objetiva e criativa em uma única página.
+                    Ideal para negócios de pequeno ou médio porte. O site One Page é um site onde você inclui todas as
+                    informações que o visitante precisa de forma objetiva e criativa em uma única página.
                 </p>
             </div>
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Em0R3csNMVE?si=cFxXmqBlNsq19lOo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Em0R3csNMVE?si=cFxXmqBlNsq19lOo"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -101,10 +107,10 @@
                 </p>
             </div>
             <div class="qrcode">
-                <img src="img/qrcode.png" alt="QR Code do wireframe do site." target="_blank">
- 
+                <img src="img/qrcode.png" alt="QR Code do wireframe do site.">
+
             </div>
- 
+
         </div>
     </section>
 
@@ -113,43 +119,90 @@
         <div class="container">
             <h2>Conteúdo</h2>
 
-            <div class="cards">
+            <div class="cards flex4">
                 <div class="card">
                     <img src="img/estruturahtml.png" alt="Estrutura HTML5">
                     <h3>HTML5</h3>
-                    <p>O HTML é usado para exibir conteúdo na WEB e a estrutura do documento é dividida em partes conforme indicado neste cartão.</p>
+                    <p>O HTML é usado para exibir conteúdo na WEB e a estrutura do documento é dividida em partes
+                        conforme indicado neste cartão.</p>
                     <a href="#" target="_blank" class="botao">Saiba+</a>
-                    </div>
+                </div>
                 <div class="card">
                     <img src="img/boxmodel.png" alt="BoxModel">
                     <h3>CSS3</h3>
-                    <p>O box model relaciona as propriedades descritas neste cartão para compor a dimensão do elemento.</p>
+                    <p>O box model relaciona as propriedades descritas neste cartão para compor a dimensão do elemento.
+                    </p>
                     <a href="#" target="_blank" class="botao">Saiba+</a>
-                    </div>
+                </div>
                 <div class="card">
                     <img src="img/javascript.png" alt="JavaScript">
                     <h3>JavaScript</h3>
-                    <p>JavaScript é uma linguagem programação usada por desenvolvedores para fazer páginas interativas na internet.</p>
+                    <p>JavaScript é uma linguagem programação usada por desenvolvedores para fazer páginas interativas
+                        na internet.</p>
                     <a href="#" target="_blank" class="botao">Saiba+</a>
-                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <!--Rodapé-->
+    <address>
+        <div class="container flex6">
+            <div id="contato">
+                <a href="https://api.whatsapp.com/send?phone=5511012341234" target="_blank">
+                    <img src="img/whatsapp.png" alt="Abrir conversa">
+                    <p>(11) 01234-1234</p>
+                </a>
+
+                <img src="img/fone.png" alt="Telefone">
+                <p>(11) 1234-1234</p>
+            </div>
+
+            <div class="endereco">
+                <a href="https://maps.app.goo.gl/E4vucSEinGAwoJAz6">
+                    <img src="img/mapa.png" alt="Google Maps" class="icone_mapa">
+                </a>
+
+                <img src="img/local.png" alt="Local" class="icone_local">
+                <p>Rua Nome da Rua, 222</p>
+                <p>Nome do Bairro</p>
+                <p>São Paulo - SP</p>
+
+                <a href="mailto:seuemail@email.com?subject=FRONTEND">
+                    <img src="img/email.png" alt="Enviar e-mail">
+                    <p>seuemail@email.com</p>
+                </a>
+
+                <p class="dados">&#128064; Endereço e dados de contato fictícios</p>
+            </div>
+
+            <div class="google_maps">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14631.063339154165!2d-46.59402221284181!3d-23.540923200000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5ec26cfdcfed%3A0x49e7eb66fd4f1f2!2sSenac%20Tatuap%C3%A9%20-%20Cel.%20Lu%C3%ADs%20Americano!5e0!3m2!1spt-BR!2sbr!4v1737588828656!5m2!1spt-BR!2sbr"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+        </div>
+    </address>
+
     <footer>
-        <div class="container">
-        <div class="copyright">
-            <p>&#169; 2024 - Somente para fins educativos</p>
-        </div>      
-        <div class="social">
-            <a href="https://www.facebook.com/login/?locale=pt_BR" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/login/pt?fromSignIn=true&trk=guest_homepage-basic_nav-header-signin" target="_blank"><img src="img/linkedin.png" alt="Linkedin"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
-            <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><img src="img/whatsapp.png" alt="WhatsApp"></a>
-            <a href="https://x.com/?lang=pt-br" target="_blank"><img src="img/x_twitter.png" alt="X-Twitter"></a>
-            <a href="https://github.com/login" target="_blank"><img src="img/github.png" alt="GitHub"></a>
-        </div>    
+        <div class="container flex5">
+            <div class="copyright">
+                <p>&#169; 2025 - Somente para fins educativos</p>
+            </div>
+            <div class="social">
+                <a href="https://www.facebook.com/login/?locale=pt_BR" target="_blank"><img src="img/facebook.png"
+                        alt="Facebook"></a>
+                <a href="https://www.linkedin.com/login/pt?fromSignIn=true&trk=guest_homepage-basic_nav-header-signin"
+                    target="_blank"><img src="img/linkedin.png" alt="Linkedin"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
+                <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><img src="img/whatsapp.png"
+                        alt="WhatsApp"></a>
+                <a href="https://x.com/?lang=pt-br" target="_blank"><img src="img/x_twitter.png" alt="X-Twitter"></a>
+                <a href="https://github.com/login" target="_blank"><img src="img/github.png" alt="GitHub"></a>
+            </div>
+        </div>
     </footer>
     <a href="#inicio" id="topo">
         <img src="img/topo.png" alt="Ir para o ínicio de site">
