--- a/game/contatos.html
+++ b/game/contatos.html
@@ -13,6 +13,7 @@
     <!--CSS Bootstrap-->
     <link rel="stylesheet" href="bootstrap-4.1.3/css/bootstrap.min.css">
  
+ 
 </head>
  
 <body>
@@ -97,39 +98,59 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Próximo</span>
             </a>
-        </div>    
+        </div>   
 
-        <!--Cards-->
-        <section class="pb-3 bg-danger">
-            <h1 class="text-center py-3">Aqui você encontra os melhores jogos!</h1>
+         <!--Formulário-->
+         <section class="container bg-light py-3">
+            <h1 class="text-center">Entre em contato conosco</h1>
 
-            <div class="card-deck text-center d-flex flex-sm-column flex-md-row">
-                <div class="card">
-                  <img class="card-img-top" src="img/xbox_x.jpg" alt="Console Xbox Serie X">
-                  <div class="card-body">
-                    <h2 class="card-title">Xbox</h2>
-                    <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
-                    <a href="xbox.html" class="btn btn-outline-danger">Saiba +</a>
-                  </div>
+            <div class="row d-flex align-items-center">
+                <div class="col-md-8">
+                    <form>
+                        <div class="form-row">
+                          <div class="form-group col-md-6">                           
+                            <input type="text" class="form-control" id="inputNome" placeholder="Nome">
+                          </div>
+                          <div class="form-group col-md-6">
+                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                          </div>
+                        </div>
+                        <div class="form-group"> 
+                          <input type="text" class="form-control" id="inputAddress" placeholder="Nome da Rua, 123">
+                        </div>
+                        <div class="form-row">
+                          <div class="form-group col-md-6">
+                            <input type="text" class="form-control" id="inputCity" placeholder="Cidade">  
+                          </div>
+                          <div class="form-group col-md-4">
+                            
+                            <select id="inputEstado" class="form-control">
+                              <option selected>São Paulo</option>
+                              <option>Rio de Janeiro</option>
+                              <option>Minas Gerais</option>
+                              <option>Espírito Santo</option>
+                            </select>
+                          </div>
+                          <div class="form-group col-md-2">
+                            <input type="text" class="form-control" id="inputCEP" placeholder="CEP">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Digite sua mensagem..."></textarea>
+                          </div>
+
+                          <div class="text-center">
+                            <button type="submit" class="btn btn-danger">Enviar</button>
+                            <button type="reset" class="btn btn-dark">Limpar</button>
+                          </div>
+                        
+                      </form>
                 </div>
-                <div class="card">
-                  <img class="card-img-top" src="img/ps5.jpg" alt="Console PlayStation 5">
-                  <div class="card-body">
-                    <h2 class="card-title">PlayStation</h2>
-                    <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional.</p>
-                    <a href="ps.html" class="btn btn-outline-danger">Saiba +</a>
-                  </div>
+                <div class="col-md-4 text-center pt-2">
+                    <img src="img/jogo-mario.jpg" alt="Jogo Mario Bross" class="img-fluid rounded">
                 </div>
-                <div class="card">
-                  <img class="card-img-top" src="img/jogo-mario.jpg" alt="Jogos">
-                  <div class="card-body">
-                    <h2 class="card-title">Jogos</h2>
-                    <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional. Este card tem o conteúdo ainda maior que o primeiro, para mostrar a altura igual, em ação.</p>
-                    <a href="fotos.html" class="btn btn-outline-danger">Saiba +</a>
-                  </div>
-                </div>
-              </div>
-          </section>
+            </div>
+         </section>
 
           <!--Rodapé-->
           <footer class="bg-danger text-light">
