--- a/game/ps.html
+++ b/game/ps.html
@@ -103,11 +103,11 @@
         <!--Conteúdo-->
 
         <section class="container bg-light py-3">
-            <h1 class="text-center text-danger">Família PlayStation</h1>
+            <h1 class="text-center text-primary">Família PlayStation</h1>
         
         <div class="row mt-3 d-flex align-items-center">
             <article class="col-md-8">
-                <h2 class="text-center text-danger">PS5</h2>
+                <h2 class="text-center">PS5</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure deserunt accusamus corporis illum possimus eveniet a? Sunt error unde beatae architecto iusto officia velit, neque provident sapiente eius reiciendis rerum?</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia magni dignissimos quibusdam soluta perspiciatis minima nihil voluptatum accusantium, necessitatibus ratione molestias. Blanditiis expedita perspiciatis minus pariatur soluta voluptate ex quae.</p>
             </article>
@@ -123,7 +123,7 @@
                 <img src="img/ps4.png" alt="Console PlayStation 4" class="img-fluid rounded-circle">
             </div>
             <article class="col-md-8">
-                <h2 class="text-center text-danger">PS4</h2>
+                <h2 class="text-center">PS4</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam amet in tempora nisi modi neque impedit ducimus laudantium quidem quisquam corrupti tempore, illum aut voluptatum quia molestias officiis doloremque adipisci?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit officiis quia rem? Iure sunt provident accusantium tenetur id dolorem vero suscipit, aperiam corporis tempore porro maiores nam quae nostrum.</p>
             </article>
